--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <h2>
     add for fun
-  <button>Click me! </button> 
-   make a conflict
+  <button>Click me! </button>  
+    DOnt do anything
 </h2>
